fixed info-panel-img alignment issue, and  finished the hero section, from picture sizing, text, and headings.

--- a/src/Pages/Landing/Landing.css
+++ b/src/Pages/Landing/Landing.css
@@ -38,23 +38,27 @@
     width:80%;
     display: flex;
     position:relative;
-    margin: 0 auto;
+    margin: 8rem auto;
 }
 
 .info-panel{
     border:1px solid #3F72AF;
     border-radius: 15px;
     margin: 40px 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .info-panel img{
     width:150px;
     height:150px;
+    margin: auto;
+
 }
 
 .info-panel-heading{
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 800;
 }
 
@@ -66,17 +70,30 @@
 
 .landing-hero-section{
     width:80%;
+    margin: 40px auto;
 }
 
 .hero-section{
     display: flex;
     gap:2rem;
-    justify-content: space-between;
+    border: 1px solid green;
+    margin: 50px;
+
 }
 
 .hero-section img{
-    width: 150px;
-    height: 150px;
+    width: 450px;
+    height: 450px;
+}
+
+.hero-section h4{
+    font-size: 50px;
+    padding: 10px;
+}
+
+.hero-section p{
+    font-size: 15px;
+    padding:10px;
 }
 
 @media(max-width:769px)
